test/files/pos/java-inherited-type1/S.scala
class S extends S1
object S {
  class Inner
}

class S1
object S1 {
  class Inner1
}
