test/files/neg/bug4217.scala
object A extends Application {
  42 match { }
}
